--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,11 +14,19 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
+    strategy:
+      matrix:
+        os: ["ubuntu20.04", "ubuntu22.04", "centos7"]
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - run: git clone --depth=1 --recursive https://github.com/The-OpenROAD-Project/OpenROAD-flow-scripts
       - run: cd OpenROAD-flow-scripts
-      - run: ./build_openroad.sh --os=ubuntu22.04
+      - run: ./build_openroad.sh --os=${{ matrix.os }}
+      - run: docker tag openroad/flow-ubuntu22.04-builder killruana/openroad:${{ matrix.os }}-latest
+      - run: docker push killruana/openroad:${{ matrix.os }}-latest
