--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -37,4 +37,4 @@ jobs:
         run: docker tag openroad/flow-${{ matrix.os }}-builder killruana/openroad:${{ matrix.os }}
       - 
         name: Push image
-        run: docker push killruana/openroad:${{ matrix.os }}-latest
+        run: docker push killruana/openroad:${{ matrix.os }}
